# crispy-octo-lamp

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.github/: FUNDING.yml
src/resize_image/: api.py  helpers.py
templates/: index.html
tests/: conftest.py
tests/unit/: test_api.py
