[tool.poetry]
name = "resize-image"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10.7,<3.11"
fastapi = ">=0.87.0,<0.88.0"
fastapi-camelcase = "^1.0.5"
uvicorn = ">=0.20.0,<0.21.0"
google-cloud-logging = "^3.2.5"
Pillow = "^9.3.0"
python-multipart = "^0.0.5"
aiofiles = "^22.1.0"
rembg = "^2.0.30"
orjson = "^3.8.3"
gunicorn = "^20.1.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.931"
pytest-cov = "^3.0.0"
poethepoet = "^0.11.0"
requests = "^2.27.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
httpx = "^0.23.1"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poe.tasks]
autoformat.sequence = [
    {cmd = "black src tests"},
    {cmd = "isort src tests"},
]

lint.sequence = [
    {cmd = "black --check -v src tests"},
    {cmd = "isort --check -v src tests"},
    {cmd = "flake8 src tests"},
    {cmd = "mypy --pretty src tests"},
]

test.sequence = ["unit", "integration"]

[tool.poe.tasks.unit]
sequence = [
    {cmd = "pytest -vv --cov-report xml --cov-report term --cov=resize_image tests/unit"},
]

[tool.poe.tasks.integration]
sequence = [
    {shell = "pytest -vv --cov-append --cov-report xml --cov-report term --cov=resize_image tests/integration"},
]

[tool.poe.tasks.local-server]
sequence = [
    {shell = "uvicorn resize_image.api:app --reload --port 8011"},
]
[tool.poe.tasks.local-server-gunicorn]
sequence = [
    {shell = "gunicorn --bind 0.0.0.0:8011 resize_image.api:app -k uvicorn.workers.UvicornWorker"},
]
[build-system]
requires = ["setuptools", "poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
